# aquabreeding

./: 01_doc.sh  CMakeLists.txt  README.md  aquabreeding_tutorial.ipynb  setup.py
.ipynb_checkpoints/: aquabreeding_tutorial-checkpoint.ipynb
aquabreeding/: .buildinfo  __init__.py  aquabreeding.py  blup.py  coalescent.py  gametogenesis.py  gblup.py  mating.py  phenotype.py  popgen.py  popinfo.py  selection.py
aquabreeding.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
aquabreeding/.doctrees/: aquabreeding.doctree  index.doctree  modules.doctree
aquabreeding/.ipynb_checkpoints/: __init__-checkpoint.py
docs/source/: aquabreeding.rst  conf.py  index.rst  modules.rst
docs/source/_static/css/: my_theme.css
src/: aquacpp.cpp  nrm.cpp
